2002-06-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/metapost.trm: In the documentation section, fixed `latex' to
	`latex` --- the reason for doc2rtf to crash.

2002-06-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* term/metapost.trm: Add pm3d capability, patch by Arun Persaud
	<apersaud@lbl.gov>.

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* src/pm3d.c: yet again improved scansautomatic

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* term/gd.trm:
	- macro Y(y)
	- PNG_point plus related functions, implementing the pointtypes
	  as in post / X11 ...

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* term/gd.trm: filledboxes

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm: removed SVG_StyleStrokeColor() which was unused

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: changes for 'linetype palette'

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: 'filledboxes pattern' for the pdf driver.

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: 'filledboxes solid' for the pdf driver

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm: use USE_ULIG_FILLEDBOXES to allow building w/o
	filledboxes support.

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* src/readline.c: install a SIGWINCH handler to solve BUG 533101
	'gnuplot exits immediately when the terminal is resized'.

2002-06-03  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm:
	- new pointtypes for svg (as X11 / post)
	- implemented pm3d 'splot ... with points lt palette'
	- implemented pm3d 'splot ... with lines  lt palette'
	- implemented 'filledboxes'

2002-05-29  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in: Explicit linking with libfreetype does not add
	-lfreetype to TERMLIBS if successful.

2002-05-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/internal.c (BAD_DEFAULT): Fix typo in message text:
 	"internal" <-- "interal".
