@@ -1,3 +1,9 @@
+2002-06-08  Johannes Zellner  <johannes@zellner.org>
+
+	* term/fig.trm term/svg.trm: added ifdefs for USE_ULIG_FILLEDBOXES
+	* term/gd.trm: use gdImagePtr /after/ gd.h is included
+	* src/gplt_x11.c: removed unused functions
+
 2002-06-07  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* term/metapost.trm: In the documentation section, fixed `latex' to
@@ -585,7 +591,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/06/06 18:31:01 $).
+	last modification date (from the tag $Date: 2002/06/07 21:25:16 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
